--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ tokio = { version = "1", features = ["full"] }
 rustls-pemfile = "1.0.3"
 actix-web = "4.3.1"
 actix-web-lab = "0.19.1"
-actix-session = "0.7.2"
+actix-session = { version = "0.7.2", features = ["cookie-session"] }
 sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "sqlite" ] }
 chrono = { version = "0.4.20", default-features = false, features = ["clock", "std"] }
 serde = { version = "1.0.130", features = ["derive"] }
